# short-linker

./: README.md  config.py  main.py  pyproject.toml
scripts/: init_db.py  init_sql.sql
src/: repositories.py  routers.py  schemes.py  services.py
tests/: conftest.py  test_shortener_api.py
